# sf-c-util

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nuget.config  vcpkg.json
sfwrapper/: CMakeLists.txt
sfwrapper/devdoc/: h_fabric_macro_generator_requirements.md
sfwrapper/inc/: h_fabric_macro_generator.h  hfabricapplicationmanagementclient10.h  hfabricclustermanagementclient10.h  hfabricfaultmanagementclient.h  hfabricqueryclient10.h  hfabricservicemanagementclient6.h  hfabrictestmanagementclient3.h  ifabricapplicationmanagementclient10sync.h  ifabricclustermanagementclient10sync.h  ifabricfaultmanagementclientsync.h  ifabricqueryclient10sync.h  ifabricservicemanagementclient6sync.h  ifabrictestmanagementclient3sync.h  mycallback.h  servicefabricdox.h  sf_macros.h
sfwrapper/src/: hfabricapplicationmanagementclient10.c  hfabricclustermanagementclient10.c  hfabricfaultmanagementclient.c  hfabricqueryclient10.c  hfabricservicemanagementclient6.c  hfabrictestmanagementclient3.c  ifabricapplicationmanagementclient10sync.c  ifabricapplicationmanagementclient10sync.cpp  ifabricclustermanagementclient10sync.c  ifabricclustermanagementclient10sync.cpp  ifabricfaultmanagementclientsync.c  ifabricfaultmanagementclientsync.cpp  ifabricqueryclient10sync.c  ifabricqueryclient10sync.cpp  ifabricservicemanagementclient6sync.c  ifabricservicemanagementclient6sync.cpp  ifabrictestmanagementclient3sync.c  ifabrictestmanagementclient3sync.cpp  mycallback.c
sfwrapper/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/common_argc_argv_int/: CMakeLists.txt  common_argc_argv_int.c
tests/configuration_package_change_handler_ut/: CMakeLists.txt  configuration_package_change_handler_ut.c  configuration_package_change_handler_ut_pch.h
tests/configuration_reader_ut/: CMakeLists.txt  configuration_reader_ut.c  configuration_reader_ut_pch.h
tests/configuration_wrapper_ut/: CMakeLists.txt  configuration_wrapper_ut.c  configuration_wrapper_ut_helpers.h  test_configuration_wrapper.c  test_configuration_wrapper.h
tests/fabric_async_op_cb_ut/: CMakeLists.txt  fabric_async_op_cb_ut.c  fabric_async_op_cb_ut_pch.h
tests/fabric_async_op_sync_wrapper_ut/: CMakeLists.txt  dlldata.c  fabric_async_op_sync_wrapper_ut.c  fabric_async_op_sync_wrapper_ut_pch.h  test_async_operation_context.h  test_async_operation_context_com.h  test_fabric_async_operation.c  test_fabric_async_operation.h  test_fabric_async_operation_com.c  test_fabric_async_operation_com.h  test_fabric_async_operation_sync_wrapper.c  test_fabric_async_operation_sync_wrapper.h  test_wrapper_no_args.c  test_wrapper_no_args.h  test_wrapper_no_begin_args.c  test_wrapper_no_begin_args.h  test_wrapper_no_end_args.c  test_wrapper_no_end_args.h  testasyncoperation.h  testasyncoperation.idl  testasyncoperation_i.c  testasyncoperation_p.c
tests/fabric_async_op_wrapper_ut/: CMakeLists.txt  dlldata.c  fabric_async_op_wrapper_ut.c  fabric_async_op_wrapper_ut_pch.h  test_async_operation_context.c  test_async_operation_context.h  test_async_operation_context_com.c  test_async_operation_context_com.h  test_fabric_async_operation.c  test_fabric_async_operation.h  test_fabric_async_operation_com.h  test_fabric_async_operation_wrapper.c  test_fabric_async_operation_wrapper.h  test_wrapper_no_args.c  test_wrapper_no_args.h  test_wrapper_no_begin_args.c  test_wrapper_no_begin_args.h  test_wrapper_no_end_args.c  test_wrapper_no_end_args.h  testasyncoperation.h  testasyncoperation.idl  testasyncoperation_i.c
tests/fabric_configuration_package_change_handler_ut/: CMakeLists.txt  fabric_configuration_package_change_handler_ut.c  fabric_configuration_package_change_handler_ut_pch.h
tests/fabric_configuration_parameter_argc_argv_int/: CMakeLists.txt  fabric_configuration_parameter_argc_argv_int.c
tests/fabric_configuration_parameter_list_argc_argv_int/: CMakeLists.txt  fabric_configuration_parameter_list_argc_argv_int.c
tests/fabric_configuration_section_argc_argv_int/: CMakeLists.txt  fabric_configuration_section_argc_argv_int.c
tests/fabric_op_completed_sync_ctx_ut/: CMakeLists.txt  fabric_op_completed_sync_ctx_ut.c  fabric_op_completed_sync_ctx_ut_pch.h  test_callback.c  test_callback.h  test_callback_com.h
tests/fabric_string_result_ut/: CMakeLists.txt  fabric_string_result_ut.c  fabric_string_result_ut_pch.h
tests/fc_activation_context_and_sf_config_int/: CMakeLists.txt  fc_activation_context_and_sf_config_int.c  service_config.c  service_config.h
tests/fc_activation_context_int/: CMakeLists.txt  fc_activation_context_int.c
tests/fc_endpoint_resource_description_argc_argv_int/: CMakeLists.txt
tests/fc_erd_argc_argv_int/: CMakeLists.txt  fc_erd_argc_argv_int.c
tests/fc_erdl_argc_argv_int/: CMakeLists.txt  fc_erdl_argc_argv_int.c
tests/fc_package_argc_argv_int/: CMakeLists.txt  fc_package_argc_argv_int.c
tests/fc_parameter_argc_argv_int/: CMakeLists.txt  fc_parameter_argc_argv_int.c
tests/fc_parameter_list_argc_argv_int/: CMakeLists.txt  fc_parameter_list_argc_argv_int.c
tests/fc_section_argc_argv_int/: CMakeLists.txt  fc_section_argc_argv_int.c
tests/fc_section_list_argc_argv_int/: CMakeLists.txt  fc_section_list_argc_argv_int.c
tests/hresult_to_string_int/: CMakeLists.txt  hresult_to_string_int.c
tests/hresult_to_string_ut/: CMakeLists.txt  hresult_to_string_mocked.c  hresult_to_string_ut.c  hresult_to_string_ut_pch.h
tests/reals/: CMakeLists.txt  real_common_argc_argv.c  real_common_argc_argv.h  real_common_argc_argv_renames.h  real_fabric_configuration_parameter_argc_argv.c  real_fabric_configuration_parameter_argc_argv.h  real_fabric_configuration_parameter_list_argc_argv.c  real_fabric_configuration_parameter_list_argc_argv.h  real_fabric_configuration_section_argc_argv.c  real_fabric_configuration_section_argc_argv.h  real_fabric_string_list_result.c  real_fabric_string_list_result.h  real_fabric_string_list_result_renames.h  real_fabric_string_result.c  real_fabric_string_result.h  real_fabric_string_result_renames.h  real_fc_activation_context.c  real_fc_activation_context.h  real_fc_erd_argc_argv.c  (+27 more)
(+116 files in other folders)
